...
            android:layout_marginStart="@dimen/linearlayout_dialog_export_encrypt_title_margin_left"
            android:layout_marginTop="@dimen/linearlayout_dialog_export_encrypt_title_margin_top"
            android:layout_marginBottom="@dimen/linearlayout_dialog_export_encrypt_title_margin_bottom"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textview_dialog_export_encrypt_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:text="@string/label_dialog_export_encrypt_title" />

...
            android:layout_marginTop="@dimen/linearlayout_dialog_export_encrypt_encrypt_margin_top"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="horizontal">

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/checkbox_dialog_export_encrypt_encrypt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:buttonTint="@drawable/checkbox_selector"
                android:text="@string/label_dialog_export_encrypt_encrypt"
                android:textColor="@color/textColor"
                android:checked="true" />
...
            android:layout_marginEnd="@dimen/linearlayout_dialog_export_encrypt_password_margin_end"
            android:layout_marginTop="@dimen/linearlayout_dialog_export_encrypt_password_margin_top"
            android:animateLayoutChanges="true"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edittext_dialog_export_encrypt_password"
                style="@style/EditTextTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="@dimen/edittext_dialog_export_encrypt_password_padding_end"
                android:drawablePadding="@dimen/edittext_dialog_export_encrypt_password_drawable_padding"
                android:importantForAutofill="no"
...
                android:textColorHint="@color/textColorHint"
                android:drawableTint="@color/textColorPrimary"
                android:drawableEnd="@drawable/ic_visibility_off"
                tools:ignore="RtlSymmetry,UnusedAttribute" />

            <TextView
                android:id="@+id/textview_dialog_export_encrypt_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/textview_dialog_export_encrypt_password_margin_top"
                android:textSize="@dimen/textview_dialog_export_encrypt_password_text_size"
                android:text=""
                android:visibility="gone" />
...
            android:layout_marginEnd="@dimen/linearlayout_dialog_export_encrypt_password_confirm_margin_end"
            android:layout_marginTop="@dimen/linearlayout_dialog_export_encrypt_password_confirm_margin_top"
            android:animateLayoutChanges="true"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edittext_dialog_export_encrypt_password_confirm"
                style="@style/EditTextTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="@dimen/edittext_dialog_export_encrypt_password_confirm_padding_end"
                android:drawablePadding="@dimen/edittext_dialog_export_encrypt_password_confirm_drawable_padding"
                android:importantForAutofill="no"
...
                android:textColorHint="@color/textColorHint"
                android:drawableTint="@color/textColorPrimary"
                android:drawableEnd="@drawable/ic_visibility_off"
                tools:ignore="RtlSymmetry,UnusedAttribute" />

            <TextView
                android:id="@+id/textview_dialog_export_encrypt_password_confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/textview_dialog_export_encrypt_password_confirm_margin_top"
                android:textSize="@dimen/textview_dialog_export_encrypt_password_confirm_text_size"
                android:text=""
                android:visibility="gone" />
...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/linearlayout_dialog_export_encrypt_ok_cancel_padding_top"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageview_dialog_export_encrypt_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:contentDescription="@string/label_dialog_export_encrypt_ok"
                app:srcCompat="@drawable/icon_ok_selector" />

            <ImageView
                android:id="@+id/imageview_dialog_export_encrypt_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:contentDescription="@string/label_dialog_export_encrypt_cancel"
...
