...
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textview_dialog_credential_info_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/textview_dialog_credential_info_title_margin_bottom"
                android:textStyle="bold"
                android:text="@string/text_dialog_credential_info_title" />

            <TextView
                android:id="@+id/textview_dialog_credential_info_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/textview_dialog_credential_info_message_margin_bottom"
                android:textStyle="normal"
                android:text="" />

        </LinearLayout>

        <ImageView
            android:id="@+id/imageview_dialog_credential_info_ok"
            android:paddingTop="@dimen/imageview_dialog_credential_info_ok_padding_top"
            android:clickable="true"
            android:focusable="true"
            android:contentDescription="@string/label_dialog_credential_info_ok"
            app:srcCompat="@drawable/icon_ok_selector" />

...
