...
  ~ limitations under the License.
  -->

<resources>
    <string name="text_dialog_credential_info_title">Re-enter credentials</string>
    <string name="text_dialog_credential_info_title_export">Invalid credentials</string>
    <string name="text_dialog_credential_info_title_encrypt">Credentials not exported</string>
    <string name="text_dialog_credential_info_message">The following credentials could not be decrypted and must be re-entered. The most likely cause is that the app was reinstalled or transferred to a new device.</string>
    <string name="text_dialog_credential_info_message_export">The following credentials are invalid. You may re-enter them now. Otherwise, they will not be exported and you have to re-enter them after import.</string>
    <string name="text_dialog_credential_info_message_encrypt">The configuration contains confidential data, which requires encryption. The following credentials will not be exported in plain text mode and you have to re-enter them after import.</string>
    <string name="text_dialog_credential_info_header">header</string>
    <string name="text_dialog_credential_info_snmp_community">SNMP community</string>
    <string name="text_dialog_credential_info_snmp_auth">SNMP authentication</string>
...
